# ssb

./: .gitignore  2021-08-08.py  3d-cc-plots.ipynb  CMakeLists.txt  GetVoxels.m  README.md  build_geometry.py  build_nodes_to_msh.sh  cell-stack-geo.sh  cell_stack_geo.py  centers.ipynb  chemo-mechanics.ipynb  circles.ipynb  clusters.py  clusters.sh  commons.py  composite_electrode_geo.py  composite_positive_electrode_geo.py  concentration-problem.ipynb  conditional_trial.py  conduction.cpp  conduction.pbs  conduction.py  conduction_diffusion.py  conductivity.py  conduit-flow.sh  conduit_flow.py  conduit_flow_analytic.ipynb  conduit_flow_geo.py  conduit_flow_hdg.py  configs.cfg  configs.py  connected_pieces.py  connectedness.py  constants.py  contact-loss-ref.geo  contact-loss.geo  contact-loss.pbs  contact-loss.sh  contact-resistance.py  (+269 more)
.ipynb_checkpoints/: ssb-model-checkpoint.ipynb
centers/: 0.1.csv  0.1.txt  0.2.csv  0.2.txt  0.3.csv  0.3.txt  0.4.csv  0.4.txt  0.5.csv  0.5.txt  0.6.csv  0.6.txt  0.7.csv  0.7.txt
configuration/: affinity.conf  cgroup.conf  inventory.yaml  mpi.conf  plugstack.conf  slurm.conf
cpp/: CMakeLists.txt  pointers_example.c
data/: 2022-09-26-results.csv  clusters.csv  clusters.xlsx  contact-area-distributed.csv  contact-area-distributed.xlsx  contact-area-varied-slits.csv  current-constriction-3d.csv  current-density-zero-right.csv  frequency-11-1.csv  frequency-11-100.csv  frequency-11-15.csv  frequency-11-30.csv  frequency-11-5.csv  frequency-11-50.csv  frequency-16-1.csv  frequency-16-100.csv  frequency-16-15.csv  frequency-16-30.csv  frequency-16-5.csv  frequency-16-50.csv  frequency-22-1.csv  frequency-22-100.csv  frequency-22-15.csv  frequency-22-30.csv  frequency-22-50.csv  frequency-6-1.csv  frequency-6-100.csv  frequency-6-15.csv  frequency-6-30.csv  frequency-6-5.csv  frequency-6-50.csv  laminate.csv  nohup.out  packed-spheres.error  packed_spheres.csv  parameters.csv  study_2_scaled.xlsx  study_3.csv  study_3.xlsx  study_3_results.csv  (+2 more)
examples/: spheres.py
experimental/: aspect-ratios.txt  conduit_flow.c  conduit_flow.cpp  darcy_flow.cpp  demo_cahn-hilliard.py  eapprox.c  galvanostatic.py  geometric-factors.csv  inlet-ratio.txt  inlet-ratios.csv  ksp_problem  ksp_problem.c  laplace_ksp.c  makefile  petsc_vec.c  poisson_ksp.c  schwarz_christoffel.cpp  secondary_current.c  tertiary_current.c  (+1 more)
iga-ssb/: CMakeLists.txt  poisson.cpp
voxel_mesher/: CMakeLists.txt  entities.c  entities.cpp  entities.h  main.c  main.cpp
(+65 files in other folders)
